crates/ferromark/src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__lists_tables__render_list_with_bold.snap
---
source: crates/ferromark/src/renderer/html/tests/lists_tables.rs
expression: html
---
<ul>
<li><strong>bold</strong> text</li>
</ul>
