crates/ferromark/src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__lists_tables__render_table.snap
---
source: crates/ferromark/src/renderer/html/tests/lists_tables.rs
expression: html
---
<table>
<thead>
<tr>
<th>head</th>
</tr>
</thead>
<tbody>
<tr>
<td>body</td>
</tr>
</tbody>
</table>
