crates/ferromark/src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__lists_tables__render_task_list.snap
---
source: crates/ferromark/src/renderer/html/tests/lists_tables.rs
expression: html
---
<ul>
<li><input type="checkbox" checked disabled> task 1</li>
<li><input type="checkbox" disabled> task 2</li>
</ul>
